修复了收藏配方在"显示可合成"筛选下崩溃的问题
优化了未使用的import